---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _1",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : [_1]",
    "EXPR [ (-1, _0) (1, _1) 0 ]"
  ],
  "debug_symbols": "dY/RCoMwDEX/Jc990IeNzV8ZQ2KNUghtia0wxH9fFLvJYE/pzem5tAv01OWxdX4IEzSPBTpxzG5sOVhMLnjdLquBEtskRLqCE1cropBP0PjMbGBGzvulKaLfZ0JRWhkg3+vUwsExbafVfO3qv3q/HW5dXz/2RfWnJrROfh88ozjsmI44ZG9PNL1iIeXDUYKlPgttTTvT7jc=",
  "file_map": {}
}
